envoy/envoy.yaml
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 80
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              config:
                codec_type: auto
                stat_prefix: ingress_http
                route_config:
                  virtual_hosts:
                    - name: backend
                      domains:
                        - 'local.panther.support'
                      routes:
                        - match:
                            prefix: '/'
                          redirect:
                            path_redirect: '/'
                            https_redirect: true
                http_filters:
                  - name: envoy.router
                    config: {}
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 443
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              config:
                access_log:
                  - name: envoy.file_access_log
                    config:
                      path: '/dev/stdout'
                codec_type: auto
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains:
                        - 'local.panther.support'
                      routes:
                        - match:
                            prefix: '/service/1'
                          route:
                            cluster: service1
                        - match:
                            prefix: '/service/2'
                          route:
                            cluster: service2
                http_filters:
                  - name: envoy.router
                    config: {}
          tls_context:
            common_tls_context:
              tls_certificates:
                - certificate_chain:
                    filename: '/etc/example-com.crt'
                  private_key:
                    filename: '/etc/example-com.key'
  clusters:
    - name: service1
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: round_robin
      http2_protocol_options: {}
      hosts:
        - socket_address:
            address: service1
            port_value: 80
    - name: service2
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: round_robin
      http2_protocol_options: {}
      hosts:
        - socket_address:
            address: service2
            port_value: 80
admin:
  access_log_path: '/dev/stdout'
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
